--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,9 +5,11 @@
     box-sizing: border-box;
 }
 
+@import '../styles/footer.scss';
 @import '../styles/header.scss';
 @import '../styles/main.scss';
 @import '../styles/variables.scss';
+@import '../styles/whatsapp-button.scss';
 
 header {
     width: 100%;
