--- a/styles/header.css
+++ b/styles/header.css
@@ -4,7 +4,7 @@
     transform: translateY(0) scale(1);
   }
   to {
-    transform: translateY(0) scale(1.1);
+    transform: translateY(-8px) scale(1.1);
   }
 }
 header {
