--- a/styles/header.scss
+++ b/styles/header.scss
@@ -7,7 +7,7 @@
         transform: translateY(0) scale(1);
     }
     to {
-        transform: translateY(0) scale(1.1);
+        transform: translateY(-8px) scale(1.1);
     }
 }
 
