--- a/styles/main.scss
+++ b/styles/main.scss
@@ -82,6 +82,7 @@
                 .card-button {
                     background-color: $lightRed;
                     border: none;
+                    border-radius: 1dvh;
                     color:$white;
                     width: 14dvh;
                     cursor: default;
@@ -102,3 +103,4 @@
         font-size: 1.6rem;
     }
 }
+
